[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiqopay"
version = "1.0.0"
description = "Official Python SDK for the tiqopay API — escrow payments for Morocco"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["escrow", "morocco", "payments", "api", "sdk", "tiqopay"]
authors = [{ name = "tiqopay" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries",
]
# Zero runtime dependencies on purpose — mirrors the Node SDK's "zero deps"
# stance. Uses stdlib urllib + hmac so a `pip install tiqopay` is small,
# auditable, and never drags in transitive surprises (urllib3 CVEs, etc.).
dependencies = []

[project.urls]
Homepage = "https://tiqopay.com"
Documentation = "https://tiqopay.com/docs"
Source = "https://github.com/tiqopay/tiqopay"
Issues = "https://github.com/tiqopay/tiqopay/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tiqopay"]

[tool.hatch.build.targets.sdist]
include = ["src/tiqopay", "README.md", "LICENSE", "pyproject.toml"]
